Fix some little bugs in agile view add additional icons...

--- a/web/bundles/zectranet/templates/task-agile.html
+++ b/web/bundles/zectranet/templates/task-agile.html
@@ -28,7 +28,12 @@
                                 <div class="col-md-12">
                                     <div class="pull-left"><span class="label label-info">[[task.postCount]]</span></div>
                                     <div ng-if="(task.assigned) && (task.assigned.name != 'none')">
-                                        <div class="pull-left" style="margin-left: 5px;"><img class="img-circle" ng-src="[[task.assigned.avatar]]" style="width: 15px; height: 15px;"></div>
+                                        <div class="pull-left" style="margin-left: 5px;"><img class="img-circle" ng-src="[[task.assigned.avatar]]" style="width: 16px; height: 16px;"></div>
+                                    </div>
+                                    <div class="pull-left" style="margin-left: 5px;">
+                                        <span ng-if="task.type.label == 'task'" class="badge" style="background-color: #5cb85c; font-size: 10px;">[['t']]</span>
+                                        <span ng-if="task.type.label == 'bug'" class="badge" style="background-color: #d9534f; font-size: 10px;">[['b']]</span>
+                                        <span ng-if="task.type.label == 'improvement'" class="badge" style="background-color: #337ab7; font-size: 10px;">[['i']]</span>
                                     </div>
                                 </div>
                             </div>
@@ -67,7 +72,12 @@
                                 <div class="col-md-12">
                                     <div class="pull-left"><span class="label label-info">[[task.postCount]]</span></div>
                                     <div ng-if="(task.assigned) && (task.assigned.name != 'none')">
-                                        <div class="pull-left" style="margin-left: 5px;"><img class="img-circle" ng-src="[[task.assigned.avatar]]" style="width: 15px; height: 15px;"></div>
+                                        <div class="pull-left" style="margin-left: 5px;"><img class="img-circle" ng-src="[[task.assigned.avatar]]" style="width: 16px; height: 16px;"></div>
+                                    </div>
+                                    <div class="pull-left" style="margin-left: 5px;">
+                                        <span ng-if="task.type.label == 'task'" class="badge" style="background-color: #5cb85c; font-size: 10px;">[['t']]</span>
+                                        <span ng-if="task.type.label == 'bug'" class="badge" style="background-color: #d9534f; font-size: 10px;">[['b']]</span>
+                                        <span ng-if="task.type.label == 'improvement'" class="badge" style="background-color: #337ab7; font-size: 10px;">[['i']]</span>
                                     </div>
                                 </div>
                             </div>
@@ -112,7 +122,12 @@
                                     <div class="col-md-12">
                                         <div class="pull-left"><span class="label label-info">[[task.postCount]]</span></div>
                                         <div ng-if="(task.assigned) && (task.assigned.name != 'none')">
-                                            <div class="pull-left" style="margin-left: 5px;"><img class="img-circle" ng-src="[[task.assigned.avatar]]" style="width: 15px; height: 15px;"></div>
+                                            <div class="pull-left" style="margin-left: 5px;"><img class="img-circle" ng-src="[[task.assigned.avatar]]" style="width: 16px; height: 16px;"></div>
+                                        </div>
+                                        <div class="pull-left" style="margin-left: 5px;">
+                                            <span ng-if="task.type.label == 'task'" class="badge" style="background-color: #5cb85c; font-size: 10px;">[['t']]</span>
+                                            <span ng-if="task.type.label == 'bug'" class="badge" style="background-color: #d9534f; font-size: 10px;">[['b']]</span>
+                                            <span ng-if="task.type.label == 'improvement'" class="badge" style="background-color: #337ab7; font-size: 10px;">[['i']]</span>
                                         </div>
                                     </div>
                                 </div>
@@ -151,7 +166,12 @@
                                 <div class="col-md-12">
                                     <div class="pull-left"><span class="label label-info">[[task.postCount]]</span></div>
                                     <div ng-if="(task.assigned) && (task.assigned.name != 'none')">
-                                        <div class="pull-left" style="margin-left: 5px;"><img class="img-circle" ng-src="[[task.assigned.avatar]]" style="width: 15px; height: 15px;"></div>
+                                        <div class="pull-left" style="margin-left: 5px;"><img class="img-circle" ng-src="[[task.assigned.avatar]]" style="width: 16px; height: 16px;"></div>
+                                    </div>
+                                    <div class="pull-left" style="margin-left: 5px;">
+                                        <span ng-if="task.type.label == 'task'" class="badge" style="background-color: #5cb85c; font-size: 10px;">[['t']]</span>
+                                        <span ng-if="task.type.label == 'bug'" class="badge" style="background-color: #d9534f; font-size: 10px;">[['b']]</span>
+                                        <span ng-if="task.type.label == 'improvement'" class="badge" style="background-color: #337ab7; font-size: 10px;">[['i']]</span>
                                     </div>
                                 </div>
                             </div>
@@ -196,7 +216,12 @@
                                 <div class="col-md-12">
                                     <div class="pull-left"><span class="label label-info">[[task.postCount]]</span></div>
                                     <div ng-if="(task.assigned) && (task.assigned.name != 'none')">
-                                        <div class="pull-left" style="margin-left: 5px;"><img class="img-circle" ng-src="[[task.assigned.avatar]]" style="width: 15px; height: 15px;"></div>
+                                        <div class="pull-left" style="margin-left: 5px;"><img class="img-circle" ng-src="[[task.assigned.avatar]]" style="width: 16px; height: 16px;"></div>
+                                    </div>
+                                    <div class="pull-left" style="margin-left: 5px;">
+                                        <span ng-if="task.type.label == 'task'" class="badge" style="background-color: #5cb85c; font-size: 10px;">[['t']]</span>
+                                        <span ng-if="task.type.label == 'bug'" class="badge" style="background-color: #d9534f; font-size: 10px;">[['b']]</span>
+                                        <span ng-if="task.type.label == 'improvement'" class="badge" style="background-color: #337ab7; font-size: 10px;">[['i']]</span>
                                     </div>
                                 </div>
                             </div>
@@ -235,7 +260,12 @@
                                 <div class="col-md-12">
                                     <div class="pull-left"><span class="label label-info">[[task.postCount]]</span></div>
                                     <div ng-if="(task.assigned) && (task.assigned.name != 'none')">
-                                        <div class="pull-left" style="margin-left: 5px;"><img class="img-circle" ng-src="[[task.assigned.avatar]]" style="width: 15px; height: 15px;"></div>
+                                        <div class="pull-left" style="margin-left: 5px;"><img class="img-circle" ng-src="[[task.assigned.avatar]]" style="width: 16px; height: 16px;"></div>
+                                    </div>
+                                    <div class="pull-left" style="margin-left: 5px;">
+                                        <span ng-if="task.type.label == 'task'" class="badge" style="background-color: #5cb85c; font-size: 10px;">[['t']]</span>
+                                        <span ng-if="task.type.label == 'bug'" class="badge" style="background-color: #d9534f; font-size: 10px;">[['b']]</span>
+                                        <span ng-if="task.type.label == 'improvement'" class="badge" style="background-color: #337ab7; font-size: 10px;">[['i']]</span>
                                     </div>
                                 </div>
                             </div>
@@ -280,7 +310,12 @@
                                 <div class="col-md-12">
                                     <div class="pull-left"><span class="label label-info">[[task.postCount]]</span></div>
                                     <div ng-if="(task.assigned) && (task.assigned.name != 'none')">
-                                        <div class="pull-left" style="margin-left: 5px;"><img class="img-circle" ng-src="[[task.assigned.avatar]]" style="width: 15px; height: 15px;"></div>
+                                        <div class="pull-left" style="margin-left: 5px;"><img class="img-circle" ng-src="[[task.assigned.avatar]]" style="width: 16px; height: 16px;"></div>
+                                    </div>
+                                    <div class="pull-left" style="margin-left: 5px;">
+                                        <span ng-if="task.type.label == 'task'" class="badge" style="background-color: #5cb85c; font-size: 10px;">[['t']]</span>
+                                        <span ng-if="task.type.label == 'bug'" class="badge" style="background-color: #d9534f; font-size: 10px;">[['b']]</span>
+                                        <span ng-if="task.type.label == 'improvement'" class="badge" style="background-color: #337ab7; font-size: 10px;">[['i']]</span>
                                     </div>
                                 </div>
                             </div>
@@ -319,7 +354,12 @@
                                 <div class="col-md-12">
                                     <div class="pull-left"><span class="label label-info">[[task.postCount]]</span></div>
                                     <div ng-if="(task.assigned) && (task.assigned.name != 'none')">
-                                        <div class="pull-left" style="margin-left: 5px;"><img class="img-circle" ng-src="[[task.assigned.avatar]]" style="width: 15px; height: 15px;"></div>
+                                        <div class="pull-left" style="margin-left: 5px;"><img class="img-circle" ng-src="[[task.assigned.avatar]]" style="width: 16px; height: 16px;"></div>
+                                    </div>
+                                    <div class="pull-left" style="margin-left: 5px;">
+                                        <span ng-if="task.type.label == 'task'" class="badge" style="background-color: #5cb85c; font-size: 10px;">[['t']]</span>
+                                        <span ng-if="task.type.label == 'bug'" class="badge" style="background-color: #d9534f; font-size: 10px;">[['b']]</span>
+                                        <span ng-if="task.type.label == 'improvement'" class="badge" style="background-color: #337ab7; font-size: 10px;">[['i']]</span>
                                     </div>
                                 </div>
                             </div>
