Fix Breadcrumb in task

--- a/src/ZectranetBundle/Resources/views/task.html.twig
+++ b/src/ZectranetBundle/Resources/views/task.html.twig
@@ -8,7 +8,7 @@
         <div ng-controller="TaskController" ng-init="getSingleTask();">
             <!-- Begin of Breadcrumbs -->
             <div class="row">
-                <ol class="breadcrumb" style="margin: 0 -15px;">
+                <ol class="breadcrumb" style="margin: 0 -30px; border-radius: 0 !important; padding: 12px 50px; background-color: #fbfbfb; ">
                     <li>
                         <a href="{{ path('zectranet_user_home') }}">Summary</a>
                     </li>
