--- a/src/ZectranetBundle/Resources/views/task.html.twig
+++ b/src/ZectranetBundle/Resources/views/task.html.twig
@@ -339,8 +339,8 @@
                             </div>
                         </div>
                         <!-- End Of Task ESTIMATED MINUTES Select -->
-
-                        {% if task.project.versions | length > 0 %}
+                        {% set versions = (task.project.parent) ? task.project.parent.versions : task.project.versions %}
+                        {% if versions | length > 0 %}
                         <!-- Begin Of Task Version Select -->
                         <div class="row" style="margin-bottom: 10px;">
                             <div class="col-md-3">
@@ -352,7 +352,6 @@
                             <div class="col-md-9">
                                 <div class="input-group" style="width: 100%;">
                                     <select class="form-control" name="version" ng-model="taskInfoEdit.versionid" style="border: none;font-weight: bold;">
-                                        {% set versions = (task.project.parent) ? task.project.parent.versions : task.project.versions %}
                                         {% for version in versions %}
                                             <option value="{{ version.id }}">{{ version.name }}</option>
                                         {% endfor %}
