--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -498,7 +498,7 @@
 
 
 {% block javascripts %}
-	<script src="{{ asset('bundles/zectranet/js/jquery-2.1.3.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/zectranet/js/jquery-2.1.3.min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/underscore-min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/Bootstrap/bootstrap.min.js') }}" type="text/javascript"></script>
 
@@ -517,6 +517,7 @@
 	<script src="{{ asset('bundles/zectranet/js/custom/angular-core.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/custom/navigation.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/lightbox.min.js') }}"></script>
+	<script src="{{ asset('bundles/zectranet/js/moment.min.js') }}"></script>
 
 	{#<script src="{{ asset('bundles/zectranet/js/custom/navigation.js') }}" type="text/javascript"></script>#}
 	{#<script src="{{ asset('bundles/zectranet/js/custom/CustomJavaScripts.js') }}"></script>#}
