--- a/src/ZectranetBundle/Resources/views/task.html.twig
+++ b/src/ZectranetBundle/Resources/views/task.html.twig
@@ -457,20 +457,19 @@
         <div ng-controller="DocumentsController">
             <div ng-controller="ChatController">
                 <ul id="myTab" class="nav nav-tabs" role="tablist">
-                    <li data-toggle="tooltip" data-placement="top" title="Logs" role="presentation" class="active">
+                    <li class="active" data-placement="top" title="Comments">
+                        <a id="coments-tab" data-toggle="tab" href="#coments">Comments</a>
+                    </li>
+                    <li data-toggle="tooltip" data-placement="top" title="Logs" class="">
                         <a data-toggle="tab" id="task-logs-tab" class="btn" href="#task-logs" aria-controls="task-logs" role="tab" aria-expanded="true">
                             Logs
                         </a>
                     </li>
-                    <li class="" role="presentation" >
-                        <a id="coments-tab" aria-controls="coments" data-toggle="tab" role="tab" href="#coments" aria-expanded="false">Comments</a>
-                    </li>
-
                 </ul>
                 <!-- End of Task Nav Tabs -->
 
                 <div id="tasks-tab-content" class="tab-content">
-                    <div id="task-logs" class="tab-pane fade in active" style="max-height: 500px; overflow-y: auto;" aria-labelledby="task-logs-tab" role="tabpanel">
+                    <div id="task-logs" class="tab-pane fade" style="max-height: 500px; min-height: 100px; overflow-y: auto;">
                         <table class="table">
                             <thead>
                             <tr>
@@ -500,7 +499,7 @@
                         </table>
                     </div>
 
-                    <div id="coments"  class="tab-pane fade" aria-labelledby="coments-tab" role="tabpanel"  ng-init="getPosts(0, 100)">
+                    <div id="coments"  class="tab-pane fade in active" ng-init="getPosts(0, 100)">
                         <div ng-style="{'height': (posts.length > 0) ? '500px' : '100px'}" style="overflow-y: auto;height: 500px; " id="posts-panel" >
                             <div class="coments" ng-repeat="post in posts"  >
                                 <p style="margin-top: 25px;" ng-init="avatar = generateAsset(urlAsset, 'documents/' + post.user.avatar)">
