--- a/web/bundles/zectranet/templates/task-table.html
+++ b/web/bundles/zectranet/templates/task-table.html
@@ -40,7 +40,11 @@
                 <i ng-hide="task.expand" class="fa fa-plus"></i>
                 <i ng-show="task.expand" class="fa fa-minus"></i>
             </a>
-            <a ng-init="taskHref = assignTaskHref(task.id)" ng-href="[[taskHref]]">[[ task.name ]]</a>
+            <a ng-init="taskHref = assignTaskHref(task.id)" ng-href="[[taskHref]]">
+                <span class="badge" style="background-color: blueviolet;" ng-if="task.newCommentsCount">[[task.newCommentsCount]]</span>
+                <span class="badge" style="background-color: cadetblue;" ng-if="(task.newSubCommentsCount) && (!task.expand)">[[task.newSubCommentsCount]]</span>
+                <span>[[ task.name ]]</span>
+            </a>
         </td>
         <td class="col-xs-1 hidden-sm hidden-xs">
             <div class="label label-default" style="background-color: [[ task.priority.color ]];">
@@ -95,13 +99,16 @@
                 [[ parentTask.id ]].[[ $index + 1 ]]
             </span>
         </td>
-        <td>
+        <td class="hidden-sm hidden-xs">
             <span ng-if="task.type.label == 'task'" class="badge" style="background-color: #5cb85c; font-size: 10px;">[['t']]</span>
             <span ng-if="task.type.label == 'bug'" class="badge" style="background-color: #d9534f; font-size: 10px;">[['b']]</span>
             <span ng-if="task.type.label == 'improvement'" class="badge" style="background-color: #337ab7; font-size: 10px;">[['i']]</span>
         </td>
         <td class="col-xs-3">
-            <a ng-init="taskHref = assignTaskHref(task.id)" ng-href="[[taskHref]]">[[ task.name ]]</a>
+            <a ng-init="taskHref = assignTaskHref(task.id)" ng-href="[[taskHref]]">
+                <span class="badge" style="background-color: blueviolet;" ng-if="task.newCommentsCount">[[task.newCommentsCount]]</span>
+                <span>[[ task.name ]]</span>
+            </a>
         </td>
         <td class="col-xs-1 hidden-sm hidden-xs">
             <div class="label label-default" style="background-color: [[ task.priority.color ]];">
