--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -498,7 +498,9 @@
 
 
 {% block javascripts %}
-    <script src="{{ asset('bundles/zectranet/js/jquery-2.1.3.min.js') }}" type="text/javascript"></script>
+
+	<script src="{{ asset('bundles/zectranet/js/jquery-2.1.3.min.js') }}" type="text/javascript"></script>
+    
 	<script src="{{ asset('bundles/zectranet/js/underscore-min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/Bootstrap/bootstrap.min.js') }}" type="text/javascript"></script>
 
@@ -507,6 +509,7 @@
 	<script src="{{ asset('bundles/zectranet/js/AngularJS/angular-sanitize.min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/AngularJS/angular-animate.min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/AngularJS/angular-busy.js') }}"></script>
+    <script src="{{ asset('bundles/zectranet/js/draganddrop.js') }}"></script>
 
 	<script src="{{ asset('bundles/zectranet/js/Bootstrap/ui-bootstrap-tpls-0.10.0.min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/metisMenu.min.js') }}" type="text/javascript"></script>
