--- a/web/bundles/zectranet/css/style.css
+++ b/web/bundles/zectranet/css/style.css
@@ -398,3 +398,23 @@
     color: #d9534f;
 
 }
+
+
+.editpost
+{
+    display: inline-block;
+    margin-left: 5px;
+}
+
+.editpost:hover i
+{
+    text-shadow: 0px 2px 2px rgba(150, 150, 150, 1);
+    cursor: pointer;
+    opacity: 1;
+
+}
+.editpost i
+{
+    cursor: pointer;
+    opacity: 0.5;
+}
